# SalesMind

./: .gitignore  README.md
SalesMind/: .env.example  README.md  ai_agent.py  app.py  config.py  data_utils.py  forecasting.py  pyproject.toml  sandbox.py
SalesMind/data/: sample_sales_data.csv  sample_superstore.csv
